--- a/formulaire4/my-app/package.json
+++ b/formulaire4/my-app/package.json
@@ -22,13 +22,16 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "^15.3.4",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.71"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
